INFORCRM-16274: Fix file upload icon alignment

--- a/content/css/themes/crm/forms.less
+++ b/content/css/themes/crm/forms.less
@@ -8,8 +8,15 @@
   width: 5px;
 }
 
-input, textarea, div.dropdown, div.multiselect, .dropdown-wrapper {
+input,
+textarea,
+div.dropdown,
+div.multiselect,
+.dropdown-wrapper {
     width: 100%;
+}
+input.fileupload-background-transparent {
+    width: 300px;
 }
 
 .group-content > h2 > button {
